# openbsw-rust

./: Cargo.toml  README.md
crates/bsw-bsp-stm32/examples/: bsw_stack_f413.rs  bsw_stack_g474.rs  can_tester_g474.rs  uds_server_f413.rs  uds_server_g474.rs
crates/bsw-bsp-stm32/src/: can_fdcan.rs  diag_can.rs  flash_g4.rs  lib.rs  nvm.rs
crates/bsw-com/: Cargo.toml
crates/bsw-com/src/: com.rs  lib.rs  packer.rs  pdu.rs  signal.rs
docs/lessons-learned/: bsp-bringup.md
docs/test-evidence/: hil-failure-investigation-2026-03-17.md  verification-report-2026-03-17.md
hil/: hil_runner.py  hil_simple.py  test_isotp_framing.py  test_session_security.py
hil/helpers/: uds.py
