[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common patterns in embedded/protocol code
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"  # UDS/COM protocol uses fixed byte widths
cast_sign_loss = "allow"            # Signal packing needs sign-preserving casts
cast_possible_wrap = "allow"        # u32↔i32 conversions in signal values
doc_markdown = "allow"              # Technical terms (ISO-TP, FDCAN, etc.)
inline_always = "allow"             # Small MMIO helpers benefit from forced inlining
match_same_arms = "allow"           # Explicit arms improve readability for protocol code

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"  # optimize for size (embedded target)
